--- a/src/ValYou.Api/Web.config
+++ b/src/ValYou.Api/Web.config
@@ -1,23 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
-  <system.web>
-    <compilation debug="true" targetFramework="4.5.1" />
-    <httpRuntime targetFramework="4.5.1" />
-  </system.web>
+  <!-- Application configration / settings -->
+  <appSettings>
+    <!-- ServiceStack license -->
+    <add key="servicestack:license" value="" />
+  </appSettings>
+  
+  <!-- Database connection strings -->
+  <connectionStrings>
+    <add name="Data" connectionString="Server=(local)\SQL14;Database=Sslakka_Data;User Id=Sslakka_User;Password=S3cret;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+    
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
+      
       <dependentAssembly>
         <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <system.web>
+    <compilation debug="true" targetFramework="4.5.1" />
+    <httpRuntime targetFramework="4.5.1" />
+  </system.web>
+
+  <!-- Required for IIS 7.0 / IIS Express (development) -->
+  <system.webServer>
+    <handlers>
+      <add path="*" verb="*" name="ServiceStack.Factory" type="ServiceStack.HttpHandlerFactory, ServiceStack" preCondition="integratedMode" resourceType="Unspecified" allowPathInfo="true" />
+    </handlers>
+
+    <validation validateIntegratedModeConfiguration="false" />
+  </system.webServer>
 </configuration>
