Added simple REST operation to retrieve values from the `sa2_cutdown` table in the database.

--- a/src/ValYou.Api/Web.config
+++ b/src/ValYou.Api/Web.config
@@ -8,7 +8,7 @@
   
   <!-- Database connection strings -->
   <connectionStrings>
-    <add name="Data" connectionString="Server=(local)\SQL14;Database=Sslakka_Data;User Id=Sslakka_User;Password=S3cret;" providerName="System.Data.SqlClient" />
+    <add name="Data" connectionString="Server=127.0.0.1; Port=5432; Database=govhack;User Id=postgres; Password=S3cret;" providerName="Npgsql" />
   </connectionStrings>
     
   <runtime>
