--- a/src/ValYou.Api/ValYou.Api.csproj
+++ b/src/ValYou.Api/ValYou.Api.csproj
@@ -87,6 +87,7 @@
       <HintPath>..\..\packages\ServiceStack.Text.4.0.40\lib\net40\ServiceStack.Text.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -120,11 +121,19 @@
   <ItemGroup>
     <Compile Include="AppConfig.cs" />
     <Compile Include="AppHost.cs" />
+    <Compile Include="Data\IShapeRepository.cs" />
+    <Compile Include="Data\Shape.cs" />
+    <Compile Include="Data\ShapeRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Operation\ShapeOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request\IGetShapes.cs" />
+    <Compile Include="Response\ShapesResponse.cs" />
+    <Compile Include="ServiceInterface\ShapesService.cs" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
