--- a/src/ValYou.Api/ValYou.Api.csproj
+++ b/src/ValYou.Api/ValYou.Api.csproj
@@ -119,6 +119,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actor\CoordinatorActor.cs" />
     <Compile Include="AppConfig.cs" />
     <Compile Include="AppHost.cs" />
     <Compile Include="Data\IShapeRepository.cs" />
